addons/ingress/nginx-gw/manifests/gatewayclass.yaml
# SPDX-FileCopyrightText: © 2026 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT
# Source: nginx-gateway-fabric/templates/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx-gw
  labels:
    helm.sh/chart: nginx-gateway-fabric-2.7.2
    app.kubernetes.io/name: nginx-gw
    app.kubernetes.io/instance: nginx-gw
    app.kubernetes.io/version: "2.7.2"
    app.kubernetes.io/managed-by: Helm
spec:
  controllerName: gateway.nginx.org/nginx-gw-controller
  parametersRef:
    group: gateway.nginx.org
    kind: NginxProxy
    name: nginx-gw-proxy-config
    namespace: nginx-gw
