addons/ingress/nginx-gw/manifests/deployment.yaml
# SPDX-FileCopyrightText: © 2026 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT
# Source: nginx-gateway-fabric/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gw-controller
  namespace: nginx-gw
  labels:
    helm.sh/chart: nginx-gateway-fabric-2.7.1
    app.kubernetes.io/name: nginx-gw
    app.kubernetes.io/instance: nginx-gw
    app.kubernetes.io/version: "2.7.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-gw
      app.kubernetes.io/instance: nginx-gw
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-gw
        app.kubernetes.io/instance: nginx-gw
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - controller
            - --gateway-ctlr-name=gateway.nginx.org/nginx-gw-controller
            - --gatewayclass=nginx-gw
            - --config=nginx-gw-config
            - --service=nginx-gw-controller
            - --agent-tls-secret=agent-tls
            - --server-tls-domain=svc
            - --cluster-domain=cluster.local
            - --metrics-port=9113
            - --health-port=8081
            - --leader-election-lock-name=nginx-gw-controller-leader-election
          image: ghcr.io/nginx/nginx-gateway-fabric:2.7.1
          imagePullPolicy: IfNotPresent
          name: nginx-gateway
          ports:
            - name: agent-grpc
              containerPort: 8443
            - name: metrics
              containerPort: 9113
            - name: health
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /readyz
              port: health
            initialDelaySeconds: 3
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            successThreshold: 1
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 1001
          volumeMounts:
            - name: nginx-agent-tls
              mountPath: /var/run/secrets/ngf
      terminationGracePeriodSeconds: 30
      serviceAccountName: nginx-gw
      securityContext:
        fsGroup: 1001
        runAsNonRoot: true
      volumes:
        - name: nginx-agent-tls
          secret:
            secretName: server-tls
