addons/ingress/nginx-gw/manifests/cluster-local-nginx-gw.yaml
# SPDX-FileCopyrightText: © 2025 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

# This Ingress serves as central ingress host for the cluster.
# Any ingress, in any namespace, can use the same hostname, and it will be
# merged with this one. See for example:
#  addons/dashboard/manifests/ingress-nginx/dashboard-traefik-ingress.yaml
#  addons/logging/manifests/opensearch-dashboards/traefik.yaml
# The certificate is taken from k8s secret 'k2s-cluster-local-tls'
# This secret will be created by cert-manager, if it is running.
# If cert-manager is not running, the secret will not be present and traefik
# will use an own self-signed certificate.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-cluster-local
  namespace: nginx-gw
  labels:
    app.kubernetes.io/part-of: nginx-gw
    app.kubernetes.io/name: nginx-gw
    app.kubernetes.io/instance: nginx-gw
spec:
  gatewayClassName: nginx-gw
  listeners:
  - name: http
    hostname: k2s.cluster.local
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    hostname: k2s.cluster.local
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: k2s-cluster-local-tls
    allowedRoutes:
      namespaces:
        from: All
